--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,3 +5,5 @@
     <li><%= link_to product.name, product_path(product) %></li>
   <% end %>
 </ul>
+<hr>
+<%= link_to "New Product", new_product_path %>
