--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,15 @@
 <h1>New list</h1>
 
-<%= form_for @list do |f| %>
+<% if @product.errors.any? %>
+  <h3>Oops there were some errors. Please try again:</h3>
+  <ul>
+    <% @product.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_for @product do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :cost %>
