--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @product.name %></h1>
-
+<h1><%= @product.cost %></h1>
+<h1><%= @product.country %></h1>
 <p><%= link_to "Return to products", products_path %></p>
