--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,10 @@
 <h1><%= @product.name %></h1>
-<h1><%= @product.cost %></h1>
+<h1>$<%= @product.cost %></h1>
 <h1><%= @product.country %></h1>
+
+<p><%= link_to "Edit", edit_product_path(@product) %></p>
+<p><%= link_to "Delete", product_path(@product),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"} %></p>
+                                   
 <p><%= link_to "Return to products", products_path %></p>
