--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,3 +7,11 @@
 </ul>
 <hr>
 <%= link_to "New Product", new_product_path %>
+
+<%= form_tag products_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+
+<% end %>
