--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -6,6 +6,6 @@
   <%= f.label :description %>
   <%= f.text_field :description %>
   <%= f.label :rating %>
-  <%= f.text_field :rating %>
+ <%= f.select :rating, [['1'],['2'],['3'],['4'],['5']] %>
   <p><%= f.submit %></p>
 <% end %>
